samples/_failures_safe/1761710160_6831da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10940684.c: In function ‘main’:
./samples/SAFE/__tmp_10940684.c:150:18: error: missing terminating " character
  150 |     while (scanf("%
      |                  ^~
./samples/SAFE/__tmp_10940684.c:150:5: error: expected expression at end of input
  150 |     while (scanf("%
      |     ^~~~~
./samples/SAFE/__tmp_10940684.c:150:5: error: expected declaration or statement at end of input
